Gebruik maken OpenApi controller